--- a/.gitignore
+++ b/.gitignore
@@ -11,4 +11,4 @@ docs/*
 !docs/riscv64imac-unknown-none-elf/
 docs/riscv64imac-unknown-none-elf/*
 !docs/riscv64imac-unknown-none-elf/doc/
-
+.vscode
