--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ exclude = ["docs"]
 
 [package.metadata.docs.rs]
 # All features except simulator and rustc-dep-of-std.
-features = ["allocator", "ckb-types", "libc", "calc-hash", "build-with-clang", "dlopen-c", "ckb2023"]
+features = ["allocator", "ckb-types", "libc", "calc-hash", "dlopen-c", "ckb2023"]
 rustdoc-args = ["--cfg", "docsrs"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -21,7 +21,6 @@ calc-hash = ["ckb-types/calc-hash"]
 allocator = ["buddy-alloc"]
 simulator = ["ckb-x64-simulator"]
 dlopen-c = ["libc"]
-build-with-clang = []
 libc = []
 ckb2023 = []
 
