--- a/.github/workflows/build-with-clang.yml
+++ b/.github/workflows/build-with-clang.yml
@@ -16,4 +16,4 @@ jobs:
     - name: Install riscv64 target
       run: rustup target add riscv64imac-unknown-none-elf
     - name: Build
-      run: cargo build --verbose --target=riscv64imac-unknown-none-elf
+      run: CC=clang-16 && cargo build --verbose --target=riscv64imac-unknown-none-elf
