--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,8 +43,8 @@ type-id = ["ckb-hash", "ckb-types"]
 cc = "1.0"
 
 [dependencies]
-ckb-types = { package = "ckb-gen-types", version = "0.202.0", default-features = false, optional = true }
-ckb-hash = { version = "0.202.0", default-features = false, features = [
+ckb-types = { package = "ckb-gen-types", version = "1.0.0-rc1", default-features = false, optional = true }
+ckb-hash = { version = "1.0.0-rc1", default-features = false, features = [
   "ckb-contract",
 ], optional = true }
 
